# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

texturesdir=$(pkgdatadir)/data1/textures

nobase_dist_textures_DATA = \
	arena10/bluedoor.tga \
	arena10/bluedoor_hm.jpg \
	arena10/bluedoor_nm.jpg \
	arena10/bluetile_hm.tga \
	arena10/bluetile_nm.tga \
	arena10/bluetile.tga \
	arena10/bricks1_nm.tga \
	arena10/bricks1.tga \
	arena10/bricks2_broken_nm.tga \
	arena10/bricks2_broken.tga \
	arena10/bricks2_hm.tga \
	arena10/bricks2_nm.tga \
	arena10/bricks2.tga \
	arena10/bricks3.tga \
	arena10/brokenwindow.tga \
	arena10/building10_broken2_nm.tga \
	arena10/building10_broken2.tga \
	arena10/building10_broken_nm.tga \
	arena10/building10_broken.tga \
	arena10/building10_nm.tga \
	arena10/building10.tga \
	arena10/building11_nm.tga \
	arena10/building11.tga \
	arena10/building12_nm.tga \
	arena10/building12.tga \
	arena10/building13_nm.tga \
	arena10/building13.tga \
	arena10/building14_nm.tga \
	arena10/building14.tga \
	arena10/building15_nm.tga \
	arena10/building15.tga \
	arena10/building1_broken_nm.tga \
	arena10/building1_broken.tga \
	arena10/building1_nm.tga \
	arena10/building1.tga \
	arena10/building2_nm.tga \
	arena10/building2.tga \
	arena10/building3_hm.tga \
	arena10/building3_nm.tga \
	arena10/building3ns_hm.tga \
	arena10/building3ns_nm.tga \
	arena10/building3ns.tga \
	arena10/building3.tga \
	arena10/building4_nm.tga \
	arena10/building4.tga \
	arena10/building5_nm.tga \
	arena10/building5.tga \
	arena10/building6_nm.tga \
	arena10/building6.tga \
	arena10/building7_nm.tga \
	arena10/building7s_hm.tga \
	arena10/building7s_nm.tga \
	arena10/building7s.tga \
	arena10/building7.tga \
	arena10/building8_nm.tga \
	arena10/building8.tga \
	arena10/building9_nm.tga \
	arena10/building9.tga \
	arena10/cement1_hm.tga \
	arena10/cement1_nm.tga \
	arena10/cement1ns_nm.tga \
	arena10/cement1ns.tga \
	arena10/cement1.tga \
	arena10/cobblestone.tga \
	arena10/cobblestone2.tga \
	arena10/cobblestone2_hm.tga \
	arena10/cobblestone2_nm.tga \
	arena10/cobblestone_hm.tga \
	arena10/cobblestone_nm.tga \
	arena10/cobblestoneng.tga \
	arena10/cobblestoneng_hm.tga \
	arena10/cobblestoneng_nm.tga \
	arena10/cobblestonens.tga \
	arena10/cobblestonens_nm.tga \
	arena10/cobwebs2.tga \
	arena10/cobwebs.tga \
	arena10/cocacola.tga \
	arena10/concrete1.tga \
	arena10/concrete1_hm.tga \
	arena10/concrete1_nm.tga \
	arena10/container1_hm.tga \
	arena10/container1_nm.tga \
	arena10/container1.tga \
	arena10/container2_hm.tga \
	arena10/container2_nm.tga \
	arena10/container2.tga \
	arena10/container2_broken.tga \
	arena10/container2_broken_hm.tga \
	arena10/container2_broken_nm.tga \
	arena10/container3_hm.tga \
	arena10/container3_nm.tga \
	arena10/container3.tga \
	arena10/container4_hm.tga \
	arena10/container4_nm.tga \
	arena10/container4.tga \
	arena10/cretewall1_nm.tga \
	arena10/cretewall1.tga \
	arena10/cretewall2_nm.tga \
	arena10/cretewall2.tga \
	arena10/elecpanel1_hm.tga \
	arena10/elecpanel1_nm.tga \
	arena10/elecpanel1.tga \
	arena10/elecpanel2_hm.tga \
	arena10/elecpanel2_nm.tga \
	arena10/elecpanel2.tga \
	arena10/elecpanel3_hm.tga \
	arena10/elecpanel3_nm.tga \
	arena10/elecpanel3.tga \
	arena10/elecpanel4_hm.tga \
	arena10/elecpanel4_nm.tga \
	arena10/elecpanel4.tga \
	arena10/elecvents_hm.tga \
	arena10/elecvents_nm.tga \
	arena10/elecvents.tga \
	arena10/elecwall1_nm.tga \
	arena10/elecwall1.tga \
	arena10/elecwall2_nm.tga \
	arena10/elecwall2.tga \
	arena10/factorybrick.tga \
	arena10/factorybrick_hm.tga \
	arena10/factorybrick_nm.tga \
	arena10/factoryfloor.tga \
	arena10/factoryfloor_hm.tga \
	arena10/factoryfloor_nm.tga \
	arena10/factoryfloor_w.tga \
	arena10/factoryfloor_w_hm.tga \
	arena10/factoryfloor_w_nm.tga \
	arena10/factoryfloorg.tga \
	arena10/factoryfloorg_hm.tga \
	arena10/factoryfloorg_nm.tga \
	arena10/floortile10_hm.tga \
	arena10/floortile10_nm.tga \
	arena10/floortile10.tga \
	arena10/floortile10w_hm.tga \
	arena10/floortile10w_nm.tga \
	arena10/floortile10w.tga \
	arena10/gothceil1_hm.tga \
	arena10/gothceil1_nm.tga \
	arena10/gothceil1.tga \
	arena10/gothmetal1.tga \
	arena10/gothwindow1_hm.tga \
	arena10/gothwindow1.tga \
	arena10/gothwindow2_hm.tga \
	arena10/gothwindow2_nm.tga \
	arena10/gothwindow2.tga \
	arena10/gothwindow2r_hm.tga \
	arena10/gothwindow2r_nm.tga \
	arena10/gothwindow2r.tga \
	arena10/gothwindow3.tga \
	arena10/gothwindow3_hm.tga \
	arena10/gothwindow3_nm.tga \
	arena10/gothwindow3r.tga \
	arena10/gothwindow3r_hm.tga \
	arena10/graffitiwall1.tga \
	arena10/grafittiwall2.tga \
	arena10/greenrustdoor.tga \
	arena10/greenrustdoor_hm.tga \
	arena10/greenrustdoor_nm.tga \
	arena10/heap1_nm.tga \
	arena10/heap1.tga \
	arena10/heap2_nm.tga \
	arena10/heap2.tga \
	arena10/heap3_nm.tga \
	arena10/heap3.tga \
	arena10/heap4_nm.tga \
	arena10/heap4.tga \
	arena10/ivy1_nm.tga \
	arena10/ivy1.tga \
	arena10/ivy2_nm.tga \
	arena10/ivy2.tga \
	arena10/messybricks1.tga \
	arena10/messybricks1_hm.tga \
	arena10/messybricks1_nm.tga \
	arena10/messybricks1_w.tga \
	arena10/messybricks1_w_hm.tga \
	arena10/messybricks1_w_nm.tga \
	arena10/metalfence1.tga \
	arena10/metalfence2.tga \
	arena10/metalfloor20_hm.tga \
	arena10/metalfloor20_nm.tga \
	arena10/metalfloor20.tga \
	arena10/metalfloor21_hm.tga \
	arena10/metalfloor21_nm.tga \
	arena10/metalfloor21.tga \
	arena10/metalfloor21w_hm.tga \
	arena10/metalfloor21w_nm.tga \
	arena10/metalfloor21w.tga \
	arena10/metalfloor21_water.tga \
	arena10/metalfloor21_water_hm.tga \
	arena10/metalfloor21_water_nm.tga \
	arena10/metalwall20_hm.tga \
	arena10/metalwall20_nm.tga \
	arena10/metalwall20.tga \
	arena10/moltenrock_nm.tga \
	arena10/moltenrock.tga \
	arena10/mossybricks1.tga \
	arena10/mossybricks1_hm.tga \
	arena10/mossybricks1_nm.tga \
	arena10/neonsign10r.tga \
	arena10/neonsign10.tga \
	arena10/neonsign11b.tga \
	arena10/neonsign11.tga \
	arena10/neonsign12.tga \
	arena10/neonsign13.tga \
	arena10/neonsign14.tga \
	arena10/neonsign15.tga \
	arena10/neonsign16r.tga \
	arena10/neonsign16.tga \
	arena10/neonsign17.tga \
	arena10/neonsign18r.tga \
	arena10/neonsign18.tga \
	arena10/neonsign19.tga \
	arena10/neonsign1.tga \
	arena10/neonsign20r.tga \
	arena10/neonsign20.tga \
	arena10/neonsign21.tga \
	arena10/neonsign22.tga \
	arena10/neonsign23.tga \
	arena10/neonsign24.tga \
	arena10/neonsign25.tga \
	arena10/neonsign26.tga \
	arena10/neonsign27.tga \
	arena10/neonsign28.tga \
	arena10/neonsign29.tga \
	arena10/neonsign2.tga \
	arena10/neonsign30.tga \
	arena10/neonsign31.tga \
	arena10/neonsign3.tga \
	arena10/neonsign4.tga \
	arena10/neonsign5.tga \
	arena10/neonsign6r.tga \
	arena10/neonsign6.tga \
	arena10/neonsign7r.tga \
	arena10/neonsign7.tga \
	arena10/neonsign8.tga \
	arena10/neonsign9.tga \
	arena10/pipes1.tga \
	arena10/planks_nm.tga \
	arena10/planks.tga \
	arena10/reddoor.tga \
	arena10/reddoor_hm.jpg \
	arena10/reddoor_nm.jpg \
	arena10/redtile_hm.tga \
	arena10/redtile_nm.tga \
	arena10/redtile.tga \
	arena10/road1.tga \
	arena10/road1_hm.tga \
	arena10/road1_nm.tga \
	arena10/road2.tga \
	arena10/road2_hm.tga \
	arena10/road2_nm.tga \
	arena10/road3.tga \
	arena10/road3_hm.tga \
	arena10/road3_nm.tga \
	arena10/road4.tga \
	arena10/road4_hm.tga \
	arena10/road4_nm.tga \
	arena10/road5.tga \
	arena10/road5_hm.tga \
	arena10/road5_nm.tga \
	arena10/roadbarrier_hm.tga \
	arena10/roadbarrier_nm.tga \
	arena10/roadbarrier.tga \
	arena10/rockdirt1_hm.tga \
	arena10/rockdirt1ng_hm.tga \
	arena10/rockdirt1ng_nm.tga \
	arena10/rockdirt1ng.tga \
	arena10/rockdirt1_nm.tga \
	arena10/rockdirt1ns_nm.tga \
	arena10/rockdirt1ns.tga \
	arena10/rockdirt1.tga \
	arena10/rustdoor1_hm.tga \
	arena10/rustdoor1_nm.tga \
	arena10/rustdoor1.tga \
	arena10/rustwall1_hm.tga \
	arena10/rustwall1_nm.tga \
	arena10/rustwall1.tga \
	arena10/rustysign1.tga \
	arena10/rustysign2.tga \
	arena10/rustysign2_hm.tga \
	arena10/rustysign2_nm.tga \
	arena10/sevenup.tga \
	arena10/sewergrate1_nm.tga \
	arena10/sewergrate1.tga \
	arena10/sign1.tga \
	arena10/sign2.tga \
	arena10/sign3.tga \
	arena10/sign4.tga \
	arena10/sign5r.tga \
	arena10/sign5.tga \
	arena10/sign6r.tga \
	arena10/sign6.tga \
	arena10/sign7_hm.tga \
	arena10/sign7_nm.tga \
	arena10/sign7.tga \
	arena10/skullpile.tga \
	arena10/skullpile_hm.tga \
	arena10/skullpile_nm.tga \
	arena10/skyscraper1_hm.tga \
	arena10/skyscraper1_nm.tga \
	arena10/skyscraper1.tga \
	arena10/skyscraper2_nm.tga \
	arena10/skyscraper2.tga \
	arena10/skyscraper3_nm.tga \
	arena10/skyscraper3.tga \
	arena10/skyscraper4_nm.tga \
	arena10/skyscraper4.tga \
	arena10/skyscraper5_nm.tga \
	arena10/skyscraper5.tga \
	arena10/skyscraper6_hm.tga \
	arena10/skyscraper6_nm.tga \
	arena10/skyscraper6.tga \
	arena10/skyscraper7_nm.tga \
	arena10/skyscraper7.tga \
	arena10/skyscraper8_hm.tga \
	arena10/skyscraper8_nm.tga \
	arena10/skyscraper8.tga \
	arena10/skyscraper9_hm.tga \
	arena10/skyscraper9_nm.tga \
	arena10/skyscraper9.tga \
	arena10/stacks1.tga \
	arena10/stacks2.tga \
	arena10/starsign_hm.tga \
	arena10/starsign_nm.tga \
	arena10/starsign.tga \
	arena10/stonewall1_nm.tga \
	arena10/stonewall1.tga \
	arena10/stonewall2_hm.tga \
	arena10/stonewall2_nm.tga \
	arena10/stonewall2.tga \
	arena10/stonewall3_nm.tga \
	arena10/stonewall3.tga \
	arena10/storefront_nm.tga \
	arena10/storefront.tga \
	arena10/trash1_nm.tga \
	arena10/trash1.tga \
	arena10/trash2_nm.tga \
	arena10/trash2.tga \
	arena10/vine1_nm.tga \
	arena10/vine1.tga \
	arena10/vinewall1_hm.tga \
	arena10/vinewall1_nm.tga \
	arena10/vinewall1.tga \
	arena10/wires1_nm.tga \
	arena10/wires1.tga \
	arena10/wires2_nm.tga \
	arena10/wires2.tga \
	arena10/wires3.tga \
	arena10/wires4.tga \
	arena2/grid2.tga \
	arena2/grid3.tga \
	arena2/grida.tga \
	arena2/gridb.tga \
	arena2/gridc.tga \
	arena2/gridd.tga \
	arena2/gride.tga \
	arena2/lava_nm.tga \
	arena2/lava.tga \
	arena2/lava_small.tga \
	arena2/metal1.tga \
	arena2/metal2.tga \
	arena2/metal3.tga \
	arena2/metal4.tga \
	arena2/metal5.tga \
	arena2/metal6.tga \
	arena3/acceleratora.tga \
	arena3/acceleratora.wal \
	arena3/acceleratorb.tga \
	arena3/acceleratorb.wal \
	arena3/acceleratorc.tga \
	arena3/acceleratorc.wal \
	arena3/acceleratord.tga \
	arena3/acceleratord.wal \
	arena3/acceleratore.tga \
	arena3/acceleratore.wal \
	arena3/acceleratorf.tga \
	arena3/acceleratorf.wal \
	arena3/acceleratorg.tga \
	arena3/acceleratorg.wal \
	arena3/ceiling1.tga \
	arena3/ceiling2.tga \
	arena3/door1.tga \
	arena3/floor1.tga \
	arena3/floor2_nm.tga \
	arena3/floor2.tga \
	arena3/floor3.tga \
	arena3/floor4.tga \
	arena3/light1.tga \
	arena3/light2.tga \
	arena3/orba.tga \
	arena3/orba.wal \
	arena3/orbb.tga \
	arena3/orbb.wal \
	arena3/orbc.tga \
	arena3/orbc.wal \
	arena3/orbd.tga \
	arena3/orbd.wal \
	arena3/orbe.tga \
	arena3/orbe.wal \
	arena3/orbf.tga \
	arena3/orbf.wal \
	arena3/orbg.tga \
	arena3/orbg.wal \
	arena3/orbh.tga \
	arena3/orbh.wal \
	arena3/trim1.tga \
	arena3/trim2.tga \
	arena3/trimlite1.tga \
	arena3/trimlite2.tga \
	arena3/wall1.tga \
	arena3/wall2.tga \
	arena3/wall3.tga \
	arena3/wall4.tga \
	arena3/wall5.tga \
	arena3/water_nm.tga \
	arena3/water.tga \
	arena4/bricks1_nm.tga \
	arena4/bricks1.tga \
	arena4/comp1_nm.tga \
	arena4/comp1.tga \
	arena4/floor1.cpt \
	arena4/floor1_nm.tga \
	arena4/floor1.tga \
	arena4/floor2.tga \
	arena4/floor3_nm.tga \
	arena4/floor3.tga \
	arena4/light1.tga \
	arena4/light2.tga \
	arena4/light3.tga \
	arena4/support1_nm.tga \
	arena4/support1.tga \
	arena4/support2.tga \
	arena4/wall1_nm.tga \
	arena4/wall1.tga \
	arena4/wall2_nm.tga \
	arena4/wall2.tga \
	arena5/bast1_nm.tga \
	arena5/bast1.tga \
	arena5/bast2.tga \
	arena5/bricks4_1_nm.tga \
	arena5/bricks4_1.tga \
	arena5/cave_nm.tga \
	arena5/cave.tga \
	arena5/chain.tga \
	arena5/cobweb.tga \
	arena5/egypt1.tga \
	arena5/egypt2.tga \
	arena5/egypt3.tga \
	arena5/egypt4.tga \
	arena5/egypt5.tga \
	arena5/egypt6_nm.tga \
	arena5/egypt6.tga \
	arena5/egypt7.tga \
	arena5/fod.tga \
	arena5/ground1_nm.tga \
	arena5/ground1.tga \
	arena5/light1.tga \
	arena5/light2.tga \
	arena5/lighta.tga \
	arena5/lighta.wal \
	arena5/lightb.tga \
	arena5/lightb.wal \
	arena5/lightc.tga \
	arena5/lightc.wal \
	arena5/lightd.tga \
	arena5/lightd.wal \
	arena5/lighte.tga \
	arena5/lighte.wal \
	arena5/lightf.tga \
	arena5/lightf.wal \
	arena5/o3cath11.tga \
	arena5/o3cath3.tga \
	arena5/o3cath5.tga \
	arena5/o3cath8.tga \
	arena5/o3rock5_nm.tga \
	arena5/o3rock5.tga \
	arena5/o3win12.tga \
	arena5/rock2_nm.tga \
	arena5/rock2.tga \
	arena5/rock_3b_nm.tga \
	arena5/rock_3b.tga \
	arena5/sekhmet3.tga \
	arena5/trim_nm.tga \
	arena5/trim_sm.tga \
	arena5/trim.tga \
	arena6/alienarena2.tga \
	arena6/alienarena.tga \
	arena6/blacktrans.tga \
	arena6/bricks1_hm.tga \
	arena6/bricks1_nm.tga \
	arena6/bricks1_sm.tga \
	arena6/bricks1.tga \
	arena6/city20.tga \
	arena6/ctfwinblue.tga \
	arena6/ctfwinred.tga \
	arena6/flamejet.tga \
	arena6/flare.tga \
	arena6/fodblue.tga \
	arena6/fodgreen.tga \
	arena6/girder1.tga \
	arena6/girder2.tga \
	arena6/icerock2_nm.tga \
	arena6/icerock2.tga \
	arena6/icerock_nm.tga \
	arena6/icerock.tga \
	arena6/ice.tga \
	arena6/plate1_nm.tga \
	arena6/plate1_hm.tga \
	arena6/plate1.tga \
	arena6/plate2_nm.tga \
	arena6/plate2_hm.tga \
	arena6/plate2.tga \
	arena6/plate3_nm.tga \
	arena6/plate3_hm.tga \
	arena6/plate3.tga \
	arena6/plate4_nm.tga \
	arena6/plate4_hm.tga \
	arena6/plate4.tga \
	arena6/plate5_nm.tga \
	arena6/plate5_hm.tga \
	arena6/plate5_sm.tga \
	arena6/plate5.tga \
	arena6/rimlight2.tga \
	arena6/rimlight.tga \
	arena6/rings.tga \
	arena6/skullite_hm.tga \
	arena6/skullite_nm.tga \
	arena6/skullite.tga \
	arena6/skull_nm.tga \
	arena6/skull.tga \
	arena6/snow_nm.tga \
	arena6/snow.tga \
	arena6/tech1_hm.tga \
	arena6/tech1_nm.tga \
	arena6/tech1.tga \
	arena6/wires1_hm.tga \
	arena6/wires1_nm.tga \
	arena6/wires1.tga \
	arena7/bluefloro_hm.tga \
	arena7/bluefloro_nm.tga \
	arena7/bluefloro.tga \
	arena7/bluegrid.tga \
	arena7/ceiling1.tga \
	arena7/floor1_hm.tga \
	arena7/floor1_nm.tga \
	arena7/floor1.tga \
	arena7/floor2_hm.tga \
	arena7/floor2_nm.tga \
	arena7/floor2.tga \
	arena7/glass.tga \
	arena7/grate1.tga \
	arena7/light10.tga \
	arena7/light11.tga \
	arena7/light12.tga \
	arena7/light13.tga \
	arena7/light14.tga \
	arena7/light1r.tga \
	arena7/light1.tga \
	arena7/light2.tga \
	arena7/light3.tga \
	arena7/light4.tga \
	arena7/light5.tga \
	arena7/light6.tga \
	arena7/light7.tga \
	arena7/light8.tga \
	arena7/light9.tga \
	arena7/lightgid2.tga \
	arena7/lightgid.tga \
	arena7/metal1.tga \
	arena7/metal2_hm.tga \
	arena7/metal2_nm.tga \
	arena7/metal2.tga \
	arena7/metal3.tga \
	arena7/piston1.tga \
	arena7/redfloro_hm.tga \
	arena7/redfloro_nm.tga \
	arena7/redfloro.tga \
	arena7/redgrid.tga \
	arena7/tekfloor1_nm.tga \
	arena7/tekfloor1.tga \
	arena7/tekwall1_nm.tga \
	arena7/tekwall1.tga \
	arena7/tekwall2_nm.tga \
	arena7/tekwall2.tga \
	arena7/tekwall3_hm.tga \
	arena7/tekwall3_nm.tga \
	arena7/tekwall3r_hm.tga \
	arena7/tekwall3r_nm.tga \
	arena7/tekwall3r.tga \
	arena7/tekwall3.tga \
	arena7/tekwall4_nm.tga \
	arena7/tekwall4r_nm.tga \
	arena7/tekwall4r.tga \
	arena7/tekwall4.tga \
	arena7/tekwall5_nm.tga \
	arena7/tekwall5.tga \
	arena7/tekwall6_nm.tga \
	arena7/tekwall6.tga \
	arena7/tekwall7_nm.tga \
	arena7/tekwall7.tga \
	arena7/tekwall8_nm.tga \
	arena7/tekwall8.tga \
	arena7/tekwall9_hm.tga \
	arena7/tekwall9_nm.tga \
	arena7/tekwall9.tga \
	arena7/warning.tga \
	arena8/bark1.tga \
	arena8/bark1_hm.tga \
	arena8/bark1_nm.tga \
	arena8/barnroof.tga \
	arena8/barnroof_nm.tga \
	arena8/barnwindows.tga \
	arena8/barnwood.tga \
	arena8/barnwood2.tga \
	arena8/barnwood_nm.tga \
	arena8/blackbrick1.tga \
	arena8/blackbrick1_nm.tga \
	arena8/blackbrick2.tga \
	arena8/blackbrick2_hm.tga \
	arena8/blackbrick2_nm.tga \
	arena8/blackbrick3.tga \
	arena8/blockmetalfloor1.tga \
	arena8/blockmetalfloor1_hm.tga \
	arena8/blockmetalfloor1_nm.tga \
	arena8/brickwall1.tga \
	arena8/brickwall1_hm.tga \
	arena8/brickwall1_nm.tga \
	arena8/bustedwood1.tga \
	arena8/ceilingtile1.tga \
	arena8/cinderblocks.tga \
	arena8/cinderblocks_hm.tga \
	arena8/cinderblocks_nm.tga \
	arena8/crackedrock1.tga \
	arena8/crackedrock1_hm.tga \
	arena8/crackedrock1_nm.tga \
	arena8/crackedrock2.tga \
	arena8/crackedrock2_hm.tga \
	arena8/crackedrock2_nm.tga \
	arena8/crackedrock3.tga \
	arena8/crackedrock3_hm.tga \
	arena8/crackedrock3_nm.tga \
	arena8/crackedrock4.tga \
	arena8/crackedrock4_hm.tga \
	arena8/crackedrock4_nm.tga \
	arena8/egyptbrick1.tga \
	arena8/egyptbrick1_hm.tga \
	arena8/egyptbrick1_nm.tga \
	arena8/egyptfloor1.tga \
	arena8/egyptfloor1_nm.tga \
	arena8/egyptrock1.tga \
	arena8/egyptrock1_hm.tga \
	arena8/egyptrock1_nm.tga \
	arena8/egyptrock2.tga \
	arena8/egyptrock2_nm.tga \
	arena8/fern.tga \
	arena8/floor3.tga \
	arena8/floor3_hm.tga \
	arena8/floor3_nm.tga \
	arena8/floor4.tga \
	arena8/floor4_hm.tga \
	arena8/floor4_nm.tga \
	arena8/grass2.tga \
	arena8/grass2_nm.tga \
	arena8/grate1.tga \
	arena8/ice.jpg \
	arena8/ice.tga \
	arena8/ice_hm.jpg \
	arena8/ice_nm.jpg \
	arena8/lavalmetal.tga \
	arena8/lavalmetal_nm.tga \
	arena8/leaves1.tga \
	arena8/metal1.tga \
	arena8/metal1_nm.tga \
	arena8/metalroof.tga \
	arena8/metalroof_hm.tga \
	arena8/metalroof_nm.tga \
	arena8/metaltrim1.tga \
	arena8/metaltrim1_hm.tga \
	arena8/metaltrim1_nm.tga \
	arena8/metaltrim2.tga \
	arena8/metaltrim2_hm.tga \
	arena8/metaltrim2_nm.tga \
	arena8/metaltrim3.tga \
	arena8/metaltrim3_hm.tga \
	arena8/metaltrim3_nm.tga \
	arena8/metalwall1.tga \
	arena8/metalwall1_hm.tga \
	arena8/metalwall1_nm.tga \
	arena8/moss.tga \
	arena8/rock1.tga \
	arena8/rock1_nm.tga \
	arena8/roughwood.tga \
	arena8/roughwood_nm.tga \
	arena8/sand1.tga \
	arena8/sand2.tga \
	arena8/slime.tga \
	arena8/slime_nm.tga \
	arena8/snow.tga \
	arena8/snow_hm.tga \
	arena8/snow_nm.tga \
	arena8/stonefloor1.tga \
	arena8/stonefloor1_hm.tga \
	arena8/stonefloor1_nm.tga \
	arena8/window1.tga \
	arena8/window1_hm.tga \
	arena8/window1_nm.tga \
	arena8/window2.tga \
	arena8/window2_hm.tga \
	arena8/window2_nm.tga \
	arena8/wood1.tga \
	arena8/wood1_hm.tga \
	arena8/wood1_nm.tga \
	arena8/wood2.tga \
	arena8/wood2_nm.tga \
	arena8/wood3.tga \
	arena8/wood3_fx.tga \
	arena8/wood3_hm.tga \
	arena8/wood3_nofx.tga \
	arena9/beam_metal_nm.tga \
	arena9/beam_metal.tga \
	arena9/biggrate1_hm.tga \
	arena9/biggrate1_nm.tga \
	arena9/biggrate1.tga \
	arena9/blueglass.tga \
	arena9/boxmetal_hm.tga \
	arena9/boxmetal_nm.tga \
	arena9/boxmetal.tga \
	arena9/brokencement1_nm.tga \
	arena9/brokencement1.tga \
	arena9/cable1.tga \
	arena9/cable2.tga \
	arena9/cable3.tga \
	arena9/cable4.tga \
	arena9/cementwall1_hm.tga \
	arena9/cementwall1_nm.tga \
	arena9/cementwall1.tga \
	arena9/chainlinkfence.tga \
	arena9/circuitwall1_hm.jpg \
	arena9/circuitwall1_nm.jpg \
	arena9/circuitwall1_nm.tga \
	arena9/circuitwall1.tga \
	arena9/comppanel2.tga \
	arena9/comppanel.tga \
	arena9/dmpltfloor1_hm.tga \
	arena9/dmpltfloor1_nm.tga \
	arena9/dmpltfloor1.tga \
	arena9/factorybricks1_hm.tga \
	arena9/factorybricks1_nm.tga \
	arena9/factorybricks1.tga \
	arena9/floor1_hm.tga \
	arena9/floor1_nm.tga \
	arena9/floor1.tga \
	arena9/floor2_hm.tga \
	arena9/floor2_nm.tga \
	arena9/floor2.tga \
	arena9/floor3_hm.tga \
	arena9/floor3_nm.tga \
	arena9/floor3.tga \
	arena9/grate1_nm.tga \
	arena9/grate1.tga \
	arena9/grate2.tga \
	arena9/grate3.tga \
	arena9/greenfloor_nm.tga \
	arena9/greenfloor.tga \
	arena9/greenglass.tga \
	arena9/greenmetal_nm.tga \
	arena9/greenmetal.tga \
	arena9/greenwall1_nm.tga \
	arena9/greenwall1.tga \
	arena9/greenwall2_hm.tga \
	arena9/greenwall2_nm.tga \
	arena9/greenwall2.tga \
	arena9/greenwall3_nm.tga \
	arena9/greenwall3.tga \
	arena9/greenwall4_nm.tga \
	arena9/greenwall4.tga \
	arena9/greenwall5_hm.jpg \
	arena9/greenwall5_nm.tga \
	arena9/greenwall5.tga \
	arena9/greenwall6_nm.tga \
	arena9/greenwall6.tga \
	arena9/hexfloor1_hm.tga \
	arena9/hexfloor1_nm.tga \
	arena9/hexfloor1.tga \
	arena9/hexfloor2_hm.tga \
	arena9/hexfloor2_nm.tga \
	arena9/hexfloor2.tga \
	arena9/hexfloor3_hm.tga \
	arena9/hexfloor3_nm.tga \
	arena9/hexfloor3.tga \
	arena9/hexfloor4.tga \
	arena9/hexfloor4_hm.tga \
	arena9/hexfloor4_nm.tga \
	arena9/hexglass.tga \
	arena9/hexgratefloor_hm.tga \
	arena9/hexgratefloor_nm.tga \
	arena9/hexgratefloor.tga \
	arena9/icefloor1_nm.tga \
	arena9/icefloor1.tga \
	arena9/icemetal1_hm.tga \
	arena9/icemetal1_nm.tga \
	arena9/icemetal1.tga \
	arena9/icemetal2_hm.tga \
	arena9/icemetal2_nm.tga \
	arena9/icemetal2.tga \
	arena9/iceplate_hm.tga \
	arena9/iceplate_nm.tga \
	arena9/iceplate.tga \
	arena9/icetrim1_hm.tga \
	arena9/icetrim1_nm.tga \
	arena9/icetrim1.tga \
	arena9/icetrim2_hm.tga \
	arena9/icetrim2_nm.tga \
	arena9/icetrim2.tga \
	arena9/icewall1_hm.tga \
	arena9/icewall1_nm.tga \
	arena9/icewall1.tga \
	arena9/icicles.tga \
	arena9/lightwall2_hm.tga \
	arena9/lightwall2_nm.tga \
	arena9/lightwall2.tga \
	arena9/lightwhite.tga \
	arena9/metal1_nm.tga \
	arena9/metal1.tga \
	arena9/metal2_nm.tga \
	arena9/metal2.tga \
	arena9/metal3_nm.tga \
	arena9/metal3.tga \
	arena9/metal4_nm.tga \
	arena9/metal4.tga \
	arena9/metal5_nm.tga \
	arena9/metal5.tga \
	arena9/metal6_nm.tga \
	arena9/metal6.tga \
	arena9/metalfloor1_hm.tga \
	arena9/metalfloor1_nm.tga \
	arena9/metalfloor1.tga \
	arena9/metalflooryellow.tga \
	arena9/metalflooryellow2.tga \
	arena9/metalflooryellow2_hm.tga \
	arena9/metalflooryellow2_nm.tga \
	arena9/metalflooryellow_hm.tga \
	arena9/metalflooryellow_nm.tga \
	arena9/metalflooryellow_s.tga \
	arena9/metalflooryellow_s_hm.tga \
	arena9/metalflooryellow_s_nm.tga \
	arena9/metalgrate1.tga \
	arena9/metalhole.tga \
	arena9/metalplate1_nm.tga \
	arena9/metalplate1.tga \
	arena9/metalscale_hm.tga \
	arena9/metalscale_nm.tga \
	arena9/metalscale.tga \
	arena9/metaltilefloor1_hm.tga \
	arena9/metaltilefloor1_nm.tga \
	arena9/metaltilefloor1.tga \
	arena9/metaltrim1_hm.tga \
	arena9/metaltrim1_nm.tga \
	arena9/metaltrim1.tga \
	arena9/metalwall1_hm.tga \
	arena9/metalwall1_nm.tga \
	arena9/metalwall1.tga \
	arena9/metalwall2_hm.tga \
	arena9/metalwall2_nm.tga \
	arena9/metalwall2.tga \
	arena9/metalwall3_hm.tga \
	arena9/metalwall3_nm.tga \
	arena9/metalwall3.tga \
	arena9/metalwall4_hm.tga \
	arena9/metalwall4_nm.tga \
	arena9/metalwall4.tga \
	arena9/metalwall5_hm.tga \
	arena9/metalwall5_nm.tga \
	arena9/metalwall5.tga \
	arena9/metalwall6_hm.tga \
	arena9/metalwall6_nm.tga \
	arena9/metalwall6.tga \
	arena9/metalwall7_hm.tga \
	arena9/metalwall7_nm.tga \
	arena9/metalwall7.tga \
	arena9/metalwall8_hm.tga \
	arena9/metalwall8_nm.tga \
	arena9/metalwall8.tga \
	arena9/panel1_nm.tga \
	arena9/panel1.tga \
	arena9/panel2_nm.tga \
	arena9/panel2.tga \
	arena9/panel3_hm.tga \
	arena9/panel3_nm.tga \
	arena9/panel3.tga \
	arena9/panel4_hm.tga \
	arena9/panel4_nm.tga \
	arena9/panel4.tga \
	arena9/panel5_nm.tga \
	arena9/panel5.tga \
	arena9/platefloor1_hm.tga \
	arena9/platefloor1_nm.tga \
	arena9/platefloor1.tga \
	arena9/platefloor2_hm.tga \
	arena9/platefloor2_nm.tga \
	arena9/platefloor2.tga \
	arena9/platefloor3_hm.tga \
	arena9/platefloor3_nm.tga \
	arena9/platefloor3.tga \
	arena9/platefloor4_hm.tga \
	arena9/platefloor4_nm.tga \
	arena9/platefloor4.tga \
	arena9/platefloor5_hm.tga \
	arena9/platefloor5_nm.tga \
	arena9/platefloor5.tga \
	arena9/platefloor6_hm.tga \
	arena9/platefloor6_nm.tga \
	arena9/platefloor6.tga \
	arena9/platefloor7_hm.tga \
	arena9/platefloor7_nm.tga \
	arena9/platefloor7.tga \
	arena9/platefloor8_hm.tga \
	arena9/platefloor8_nm.tga \
	arena9/platefloor8.tga \
	arena9/purpleglass.tga \
	arena9/redglass.tga \
	arena9/redtechwall2_hm.tga \
	arena9/redtechwall2_nm.tga \
	arena9/redtechwall2.tga \
	arena9/redwall1_nm.tga \
	arena9/redwall1.tga \
	arena9/roundlightb.tga \
	arena9/roundlightr.tga \
	arena9/roundlight.tga \
	arena9/rustmetal1_nm.tga \
	arena9/rustmetal1.tga \
	arena9/techfloor1_hm.tga \
	arena9/techfloor1_nm.tga \
	arena9/techfloor1.tga \
	arena9/techwall1_hm.tga \
	arena9/techwall1_nm.tga \
	arena9/techwall1.tga \
	arena9/techwall2_hm.tga \
	arena9/techwall2_nm.tga \
	arena9/techwall2.tga \
	arena9/techwall3_hm.tga \
	arena9/techwall3_nm.tga \
	arena9/techwall3.tga \
	arena9/trim1_nm.tga \
	arena9/trim1.tga \
	arena9/trim2_nm.tga \
	arena9/trim2.tga \
	arena9/wall1_nm.tga \
	arena9/wall1.tga \
	arena9/wall2_hm.tga \
	arena9/wall2_nm.tga \
	arena9/wall2.tga \
	arena9/weapongrate.tga \
	arena9/wetbricks1_hm.tga \
	arena9/wetbricks1_nm.tga \
	arena9/wetbricks1.tga \
	arena9/wires1.tga \
	arena9/wires2.tga \
	arena9/wires3.tga \
	arena9/wires4.tga \
	arena9/wires5.tga \
	arena9/wires6.tga \
	arena9/wires7.tga \
	arena9/wires8.tga \
	arena9/yellowmetal_nm.tga \
	arena9/yellowmetal.tga \
	arena9/yellowwall1_hm.jpg \
	arena9/yellowwall1_nm.tga \
	arena9/yellowwall1.tga \
	billboards/billboard1.tga \
	billboards/billboard2.tga \
	billboards/billboard3.tga \
	billboards/billboard4.tga \
	blanks/blank1.tga \
	blanks/blank2.tga \
	blanks/blank3.tga \
	blanks/blank4.tga \
	blanks/blank5.tga \
	blanks/blank6.tga \
	blanks/blank7.tga \
	blood/blood_handprint.tga \
	blood/blood_splatter1.tga \
	blood/blood_splatter2.tga \
	blood/blood_splatter3.tga \
	blood/blood_splatter4.tga \
	blood/slime_splatter1.tga \
	blood/slime_splatter2.tga \
	blood/slime_splatter2_hm.tga \
	blood/slime_splatter2_nm.tga \
	common/0_clip.tga \
	common/0_hint.tga \
	common/0_sky1.tga \
	common/areaportal.tga \
	common/caulk.tga \
	common/clip.tga \
	common/cushion.tga \
	common/full_clip.tga \
	common/hint.tga \
	common/missileclip.tga \
	common/nodraw.tga \
	common/nodrop.tga \
	common/nolightmap.tga \
	common/origin.tga \
	common/qer_portal.tga \
	common/slick.tga \
	common/trigger.tga \
	common/weapclip.tga \
	common/white.tga \
	cr3blankclear.wal \
	ctf-abyss/canyon1.tga \
	ctf-abyss/canyon1_blendtex.tga \
	ctf-abyss/canyon1_blendtex2.tga \
	ctf-abyss/canyon1_lightmaptex.tga \
	ctf-abyss/canyon1_vegetation.tga \
	ctf-dynasty/ground.tga \
	ctf-dynasty/ground_blendmap1.tga \
	ctf-dynasty/ground_lightmaptex.tga \
	ctf-dynasty/ground_vegetation.tga \
	ctf-extermination/rubble1.tga \
	ctf-extermination/rubble1_blendtex.tga \
	ctf-extermination/rubble1_lightmaptex.tga \
	ctf-extermination/rubble2.tga \
	ctf-extermination/rubble2_blendtex.tga \
	ctf-extermination/rubble2_lightmaptex.tga \
	ctf-extermination/rubble3.tga \
	ctf-extermination/rubble3_blendtex.tga \
	ctf-extermination/rubble3_lightmaptex.tga \
	ctf-extermination/rubble3_vegetation.tga \
	ctf-extermination/rubble4.tga \
	ctf-extermination/rubble4_blendtex.tga \
	ctf-extermination/rubble4_lightmaptex.tga \
	ctf-extermination/rubble4_vegetation.tga \
	ctf-frost/canyon1.tga \
	ctf-frost/canyon1_blendtex.tga \
	ctf-frost/canyon1_lightmaptex.tga \
	ctf-frost/canyon1_vegetation.tga \
	ctf-frost/frozengrass1.tga \
	ctf-frost/frozengrass1_hm.tga \
	ctf-frost/frozengrass1_nm.tga \
	ctf-frost/ice_blotch1.tga \
	ctf-frost/ice_blotch2.tga \
	ctf-frost/snow1.tga \
	ctf-frost/snow1_blendtex.tga \
	ctf-frost/snow1_lightmaptex.tga \
	ctf-terminal/ground.tga \
	ctf-terminal/ground_blendmap1.tga \
	ctf-terminal/ground_blendmap2.tga \
	ctf-terminal/ground_lightmaptex.tga \
	ctf-terminal/ground_vegetation.tga \
	decals/damage1.tga \
	decals/damage2.tga \
	decals/damage3.tga \
	decals/damage4.tga \
	decals/mud1.tga \
	decals/pondscum.tga \
	decals/rock1.tga \
	decals/rust1.tga \
	decals/snow1.tga \
	decals/snow2.tga \
	decals/snow3.tga \
	decals/stonearch.tga \
	decals/stonearch2.tga \
	decals/stonearch2_normal.tga \
	decals/stonearch_normal.tga \
	decals/whirly_spotlight.tga \
	desert/03door4.tga \
	desert/03door4_hm.tga \
	desert/03door4_nm.tga \
	desert/arrow1.tga \
	desert/arrow2.tga \
	desert/arrow2_fx.tga \
	desert/arrow3.tga \
	desert/arrow3_fx.tga \
	desert/barnroof.tga \
	desert/barnroof_nm.tga \
	desert/barnwindows.tga \
	desert/barnwood.tga \
	desert/barnwood2.tga \
	desert/barnwood2_nm.tga \
	desert/barnwood_nm.tga \
	desert/beamwall.tga \
	desert/beamwall_hm.tga \
	desert/beamwall_nm.tga \
	desert/blacktrans.tga \
	desert/bloodlava.tga \
	desert/cliffblock.tga \
	desert/cliffblock_nm.tga \
	desert/cliffblock_hm.tga \
	desert/cliffbottom.tga \
	desert/cliffbottom_hm.tga \
	desert/cliffbottom_nm.tga \
	desert/cliffbottom_nm_wet.tga \
	desert/cliffmiddle.tga \
	desert/cliffmiddle_hm.tga \
	desert/cliffmiddle_nm.tga \
	desert/clifftop.tga \
	desert/clifftop2.tga \
	desert/clifftop2_hm.tga \
	desert/clifftop2_nm.tga \
	desert/clifftop_nm.tga \
	desert/damage1.tga \
	desert/damage2.tga \
	desert/damage3.tga \
	desert/damage4.tga \
	desert/floortile10.tga \
	desert/floortile10_hm.tga \
	desert/floortile10_nm.tga \
	desert/floortile10w.tga \
	desert/floortile10w_hm.tga \
	desert/floortile10w_nm.tga \
	desert/foundtn.tga \
	desert/guardrail.tga \
	desert/hangingmoss.tga \
	desert/hangingmoss2.tga \
	desert/hangingmoss3.tga \
	desert/hangingmoss4.tga \
	desert/lavarock1.tga \
	desert/lavarock1_hm.tga \
	desert/lavarock1_nm.tga \
	desert/lipsign.tga \
	desert/metalmesh1.tga \
	desert/metalmesh1_nm.tga \
	desert/o3metal1.tga \
	desert/o3rock10.tga \
	desert/o3rock10_hm.tga \
	desert/o3rock10_nm.tga \
	desert/o3rock16.tga \
	desert/o3rock16_hm.tga \
	desert/o3rock16_nm.tga \
	desert/o3rocks1.tga \
	desert/o3rocks1_nm.tga \
	desert/o3roof1.tga \
	desert/o3roof2.tga \
	desert/pebbles.tga \
	desert/pebbles_hm.tga \
	desert/pebbles_nm.tga \
	desert/plank1.tga \
	desert/plank1_nm.tga \
	desert/platewall1.tga \
	desert/platewall1_hm.tga \
	desert/platewall1_nm.tga \
	desert/platewall2.tga \
	desert/platewall2_hm.tga \
	desert/platewall2_nm.tga \
	desert/rebardamage1.tga \
	desert/rebardamage2.tga \
	desert/rebardamage3.tga \
	desert/rock1.tga \
	desert/rock1_hm.tga \
	desert/rock1_nm.tga \
	desert/rockground1.tga \
	desert/rockground1_hm.tga \
	desert/rockground1_nm.tga \
	desert/roughwood1.tga \
	desert/roughwood1_nm.tga \
	desert/roughwood2.tga \
	desert/roughwood2_nm.tga \
	desert/roughwood3.tga \
	desert/roughwood3_nm.tga \
	desert/roughwood4.tga \
	desert/rustbeam1.tga \
	desert/rustbeam1_nm.tga \
	desert/rustbeam2.tga \
	desert/rustbeam2_nm.tga \
	desert/rustpanel1.tga \
	desert/rustpanel1_nm.tga \
	desert/rustpanel2.tga \
	desert/rustpanel2_nm.tga \
	desert/rustydoor1.tga \
	desert/rustydoor1_nm.tga \
	desert/rustydoor2.tga \
	desert/rustydoor2_nm.tga \
	desert/rustydoor3.tga \
	desert/rustydoor3_nm.tga \
	desert/rustygrill1.tga \
	desert/rustygrill1_nm.tga \
	desert/rustymetal1.tga \
	desert/rustymetal1_hm.tga \
	desert/rustymetal1_nm.tga \
	desert/shoesonwire.tga \
	desert/sign1.tga \
	desert/skullsupp2.tga \
	desert/tent1.tga \
	desert/thatch1.tga \
	desert/thatch2.tga \
	desert/thatch3.tga \
	desert/thatch4.tga \
	desert/tree1.tga \
	desert/tree2.tga \
	desert/web1.tga \
	desert/web2.tga \
	desert/web3.tga \
	desert/window1.tga \
	desert/window1_nm.tga \
	desert/window2.tga \
	desert/window2_nm.tga \
	desert/window3.tga \
	desert/window3_nm.tga \
	desert/window5.tga \
	desert/window5_nm.tga \
	desert/wires1.tga \
	desert/wires1_nm.tga \
	desert/wires2.tga \
	desert/wires2_nm.tga \
	desert/wires3.tga \
	desert/wires3_nm.tga \
	desert/wires4.tga \
	desert/wires4_nm.tga \
	desert/wood1.tga \
	desert/wood2.tga \
	desert/wood3.tga \
	desert/wood5.tga \
	desert/wood6.tga \
	desert/wood8.tga \
	desert/woodwall1.tga \
	desert/woodwall1_nm.tga \
	desert/woodwall2.tga \
	desert/woodwall2_nm.tga \
	desert/woodwall3.tga \
	desert/woodwall3_nm.tga \
	desert/woodwall4.tga \
	desert/woodwall4_nm.tga \
	dm-annihilation/rubble1.tga \
	dm-annihilation/rubble1_blendtex.tga \
	dm-annihilation/rubble1_lightmaptex.tga \
	dm-annihilation/rubble1_vegetation.tga \
	dm-annihilation/rubble2.tga \
	dm-annihilation/rubble2_blendtex.tga \
	dm-annihilation/rubble2_lightmaptex.tga \
	dm-babel/lavarock1.tga \
	dm-babel/lavarock1_blendtex.tga \
	dm-babel/lavarock1_lightmaptex.tga \
	dm-bloodfactory/rubble1.tga \
	dm-bloodfactory/rubble1_blendtex.tga \
	dm-bloodfactory/rubble1_lightmaptex.tga \
	dm-bloodfactory/rubble2.tga \
	dm-bloodfactory/rubble2_blendtex.tga \
	dm-bloodfactory/rubble2_lightmaptex.tga \
	dm-crucible/ground1.tga \
	dm-crucible/ground1_blendtex.tga \
	dm-crucible/ground1_lightmaptex.tga \
	dm-crucible/ground2.tga \
	dm-crucible/ground2_blendtex.tga \
	dm-crucible/ground2_lightmaptex.tga \
	dm-crucible/ground3.tga \
	dm-crucible/ground3_blendtex.tga \
	dm-crucible/ground3_lightmaptex.tga \
	dm-dismal/ice.jpg \
	dm-dismal/ice_nm.jpg \
	dm-dismal/rubble1.tga \
	dm-dismal/rubble1_blendtex.tga \
	dm-dismal/rubble1_lightmaptex.tga \
	dm-dismal/snow.jpg \
	dm-dismal/snow1.tga \
	dm-dismal/snow1_blendtex.tga \
	dm-dismal/snow1_lightmaptex.tga \
	dm-dismal/snow_nm.jpg \
	dm-extermination/rubble1.tga \
	dm-extermination/rubble1_blendtex.tga \
	dm-extermination/rubble1_lightmaptex.tga \
	dm-extermination/rubble2.tga \
	dm-extermination/rubble2_blendtex.tga \
	dm-extermination/rubble2_lightmaptex.tga \
	dm-extermination/rubble2_vegetation.tga \
	dm-extermination/rubble3.tga \
	dm-extermination/rubble3_blendtex.tga \
	dm-extermination/rubble3_lightmaptex.tga \
	dm-extermination/rubble3_vegetation.tga \
	dm-gauntlet/bottom.tga \
	dm-gauntlet/bottom_blendtex.tga \
	dm-gauntlet/bottom_lightmaptex.tga \
	dm-leviathan/canyon1.tga \
	dm-leviathan/canyon1_blendtex.tga \
	dm-leviathan/canyon1_blendtex2.tga \
	dm-leviathan/canyon1_lightmaptex.tga \
	dm-leviathan/canyon1_vegetation.tga \
	dm-neptune/cave1.tga \
	dm-neptune/cave1_blendtex.tga \
	dm-neptune/cave1_lightmaptex.tga \
	dm-neptune/cave2.tga \
	dm-neptune/cave2_blendtex.tga \
	dm-neptune/cave2_lightmaptex.tga \
	dm-neptune/cave3.tga \
	dm-neptune/cave3_blendtex.tga \
	dm-neptune/cave3_lightmaptex.tga \
	dm-neptune/cave4.tga \
	dm-neptune/cave4_blendtex.tga \
	dm-neptune/cave4_lightmaptex.tga \
	dm-purgatory/bottom.tga \
	dm-purgatory/bottom2.tga \
	dm-purgatory/bottom2_blendtex.tga \
	dm-purgatory/bottom2_lightmaptex.tga \
	dm-purgatory/bottom2_vegetation.tga \
	dm-purgatory/bottom3.tga \
	dm-purgatory/bottom3_blendtex.tga \
	dm-purgatory/bottom3_lightmaptex.tga \
	dm-purgatory/bottom_blendtex.tga \
	dm-purgatory/bottom_lightmaptex.tga \
	dm-purgatory/bottom_vegetation.tga \
	dm-turbo/rubble1.tga \
	dm-turbo/rubble1_blendtex.tga \
	dm-turbo/rubble1_lightmaptex.tga \
	dm-turbo/rubble1_vegetation.tga \
	dm-wasteland/canyon1.tga \
	dm-wasteland/canyon1_blendtex.tga \
	dm-wasteland/canyon1_blendtex2.tga \
	dm-wasteland/canyon1_lightmaptex.tga \
	dm-wasteland/canyon1_rocks.tga \
	dm-wasteland/canyon1_vegetation.tga \
	evil/confllrtile2pad_nm.tga \
	evil/confllrtile2pad.tga \
	evil/drktek_symb_hm.tga \
	evil/drktek_symb_nm.tga \
	evil/drktek_symb.tga \
	evil/e5stepside_hm.tga \
	evil/e5stepside_nm.tga \
	evil/e5stepside.tga \
	evil/e6basegrate_nm.tga \
	evil/e6basegrate.tga \
	evil/e6drstmetal_b_hm.tga \
	evil/e6drstmetal_b_nm.tga \
	evil/e6drstmetal_b.tga \
	evil/e6dtrimnd_nm.tga \
	evil/e6dtrimnd.tga \
	evil/e6grate_flr_hm.tga \
	evil/e6grate_flr_nm.tga \
	evil/e6grate_flr.tga \
	evil/e6horzlight_green.tga \
	evil/e6horzlight.tga \
	evil/e6horzlight_hm.tga \
	evil/e6horzlight_hm.jpg \
	evil/e6horzlight_nm.tga \
	evil/e6launchengine_hm.tga \
	evil/e6launchengine_nm.tga \
	evil/e6launchengine.tga \
	evil/e6metalfan.tga \
	evil/e6simpwallsupp_rst_hm.tga \
	evil/e6simpwallsupp_rst_nm.tga \
	evil/e6simpwallsupp_rst.tga \
	evil/e6supptrim128_hm.tga \
	evil/e6supptrim128_nm.tga \
	evil/e6supptrim128.tga \
	evil/e6trim_basic128_nm.tga \
	evil/e6trim_basic128.tga \
	evil/e7beam01_hm.tga \
	evil/e7beam01_nm.tga \
	evil/e7beam01.tga \
	evil/e8_btrim04_hm.tga \
	evil/e8_btrim04_nm.tga \
	evil/e8_btrim04.tga \
	evil/e8crete01stair1_hm.tga \
	evil/e8crete01stair1_nm.tga \
	evil/e8crete01stair1.tga \
	evil/e8crete03b_hm.tga \
	evil/e8crete03b_nm.tga \
	evil/e8crete03b.tga \
	evil/e8crete03_hm.tga \
	evil/e8crete03_nm.tga \
	evil/e8crete03.tga \
	evil/e8_jumppad02_hm.tga \
	evil/e8_jumppad02_nm.tga \
	evil/e8_jumppad02.tga \
	evil/e8_launchpad1_hm.tga \
	evil/e8_launchpad1_nm.tga \
	evil/e8_launchpad1.tga \
	evil/e8_mtlwall1_hm.tga \
	evil/e8_mtlwall1_nm.tga \
	evil/e8_mtlwall1.tga \
	evil/e8tinylightblue.tga \
	evil/e8warning_hm.tga \
	evil/e8warning_nm.tga \
	evil/e8warning.tga \
	evil/e8xgirder_small.tga \
	evil/e8xgirder.tga \
	evil/ex_cretefloor_01_hm.tga \
	evil/ex_cretefloor_01_nm.tga \
	evil/ex_cretefloor_01.tga \
	evil/ex_floor_mtl_grate_01_hm.tga \
	evil/ex_floor_mtl_grate_01_nm.tga \
	evil/ex_floor_mtl_grate_01.tga \
	evil/ex_floor_tile_03_hm.tga \
	evil/ex_floor_tile_03_nm.tga \
	evil/ex_floor_tile_03.tga \
	evil/ex_lightpanel_01_d.tga \
	evil/exmetal_plate01b_d_hm.tga \
	evil/exmetal_plate01b_d_nm.tga \
	evil/exmetal_plate01b_d.tga \
	evil/exmetalrib01_d_hm.tga \
	evil/exmetalrib01_d_nm.tga \
	evil/exmetalrib01_d.tga \
	evil/ex_metalsupp01_d_hm.tga \
	evil/ex_metalsupp01_d_nm.tga \
	evil/ex_metalsupp01_d.tga \
	evil/ex_rndfloor_01_d_hm.tga \
	evil/ex_rndfloor_01_d_nm.tga \
	evil/ex_rndfloor_01_d.tga \
	evil/ex_steptop_01_d_hm.tga \
	evil/ex_steptop_01_d_nm.tga \
	evil/ex_steptop_01_d.tga \
	evil/ex_trim_psimple_04_d_hm.tga \
	evil/ex_trim_psimple_04_d_nm.tga \
	evil/ex_trim_psimple_04_d.tga \
	evil/ex_trim_psimple_05_d_hm.tga \
	evil/ex_trim_psimple_05_d_nm.tga \
	evil/ex_trim_psimple_05_d.tga \
	evil/ex_trim_support_03_d_hm.tga \
	evil/ex_trim_support_03_d_nm.tga \
	evil/ex_trim_support_03_d.tga \
	evil/ex_wall_01b_d_hm.tga \
	evil/ex_wall_01b_d_nm.tga \
	evil/ex_wall_01b_d.tga \
	evil/ex_wall_panel_05_d_hm.tga \
	evil/ex_wall_panel_05_d_nm.tga \
	evil/ex_wall_panel_05_d.tga \
	evil/ex_wall_pipe_d_hm.tga \
	evil/ex_wall_pipe_d_nm.tga \
	evil/ex_wall_pipe_d.tga \
	evil/stepside_mtl2_hm.tga \
	evil/stepside_mtl2_nm.tga \
	evil/stepside_mtl2.tga \
	evil/stepside_mtl3_hm.tga \
	evil/stepside_mtl3_nm.tga \
	evil/stepside_mtl3.tga \
	evil/stepside_mtl4light_hm.tga \
	evil/stepside_mtl4light_nm.tga \
	evil/stepside_mtl4light.tga \
	evil/stepside_mtl5_nm.tga \
	evil/stepside_mtl5.tga \
	evil/stepside_mtl_nm.tga \
	evil/stepside_mtl.tga \
	evil/steptop_mtl2_hm.tga \
	evil/steptop_mtl2_nm.tga \
	evil/steptop_mtl2.tga \
	evil/steptop_mtl3_hm.tga \
	evil/steptop_mtl3_nm.tga \
	evil/steptop_mtl3.tga \
	evil/techallmix_hm.tga \
	evil/techallmix_nm.tga \
	evil/techallmix.tga \
	evil/trim_drkmtl_nm.tga \
	evil/trim_drkmtl.tga \
	evil/trimrstmtlpipes_nm.tga \
	evil/trimrstmtlpipes.tga \
	evil/trstmtl_panelbig_hm.tga \
	evil/trstmtl_panelbig_nm.tga \
	evil/trstmtl_panelbig.tga \
	martian/biometal1_hm.tga \
	martian/biometal1_nm.tga \
	martian/biometal1.tga \
	martian/chains.tga \
	martian/coiledwire.tga \
	martian/console1.tga \
	martian/console2.tga \
	martian/console3.tga \
	martian/console4.tga \
	martian/floor1.tga \
	martian/floor2.tga \
	martian/glass1.tga \
	martian/grass.tga \
	martian/grass_tga.tga \
	martian/light1.tga \
	martian/light2.tga \
	martian/light3.tga \
	martian/light4.tga \
	martian/light5.tga \
	martian/light6.tga \
	martian/metal1.tga \
	martian/metal2.tga \
	martian/metal3.tga \
	martian/metal4.tga \
	martian/metal5.tga \
	martian/metalrings1.tga \
	martian/metalrings2.tga \
	martian/ribtubeswirl_hm.jpg \
	martian/ribtubeswirl_nm.jpg \
	martian/ribtubeswirl.tga \
	martian/saucerwall1_nm.tga \
	martian/saucerwall1.tga \
	martian/shiphull2_hm.tga \
	martian/shiphull2_nm.tga \
	martian/shiphull2.tga \
	martian/shiphull_hm.tga \
	martian/shiphull_nm.tga \
	martian/shiphull.tga \
	martian/skytrees.tga \
	martian/skytrees_tga.tga \
	martian/tree2_tga.tga \
	martian/tree_bottom.tga \
	martian/tree_bottom_tga.tga \
	martian/tree_tga.tga \
	martian/tree_top.tga \
	martian/tree_top_tga.tga \
	metal/bigconduit.tga \
	metal/ceiling1.tga \
	metal/door1.tga \
	metal/doorjam.tga \
	metal/fade1.tga \
	metal/fade2.tga \
	metal/floor.tga \
	metal/light1_s.tga \
	metal/light1.tga \
	metal/light2_s.tga \
	metal/light2.tga \
	metal/light3_s.tga \
	metal/light3.tga \
	metal/light4.tga \
	metal/light5_s.tga \
	metal/light5.tga \
	metal/medconduit.tga \
	metal/metal1.tga \
	metal/metal2.tga \
	metal/metal3.tga \
	metal/metal4.tga \
	metal/metal5.tga \
	metal/openfloor2.tga \
	metal/openfloor.tga \
	metal/plat.tga \
	metal/saucer1.tga \
	metal/saucer2.tga \
	metal/silo.tga \
	metal/smallconduit.tga \
	metal/trim1.tga \
	metal/trim2.tga \
	metal/wall1_nm.tga \
	metal/wall1_sm.tga \
	metal/wall1.tga \
	metal/wall2_nm.tga \
	metal/wall2_sm.tga \
	metal/wall2.tga \
	metal/wall3.tga \
	metal/wall4.tga \
	metal/wall5.tga \
	metal/wall6.tga \
	metal/walllite.tga \
	null.tga \
	phillipk/pk01_door01.tga \
	phillipk/pk01_door01_hm.tga \
	phillipk/pk01_door01_nm.tga \
	phillipk/pk01_floor01_hm.tga \
	phillipk/pk01_floor01_nm.tga \
	phillipk/pk01_floor01a.tga \
	phillipk/pk01_floor02a.tga \
	phillipk/pk01_floor02a_hm.tga \
	phillipk/pk01_floor02a_nm.tga \
	phillipk/pk01_floor02b.tga \
	phillipk/pk01_floor02b_hm.tga \
	phillipk/pk01_floor02b_nm.tga \
	phillipk/pk01_gra_floor01.tga \
	phillipk/pk01_gra_floor01_hm.tga \
	phillipk/pk01_gra_floor01_nm.tga \
	phillipk/pk01_pan_floor01b.tga \
	phillipk/pk01_pan_floor01b_hm.tga \
	phillipk/pk01_pan_floor01b_nm.tga \
	phillipk/pk01_pan_floor02.tga \
	phillipk/pk01_pan_floor02_hm.tga \
	phillipk/pk01_pan_floor02_nm.tga \
	phillipk/pk01_pan_wall01.tga \
	phillipk/pk01_pan_wall01_hm.tga \
	phillipk/pk01_pan_wall01_nm.tga \
	phillipk/pk01_pan_wall02a1.tga \
	phillipk/pk01_pan_wall02a1_hm.tga \
	phillipk/pk01_pan_wall02a1_nm.tga \
	phillipk/pk01_pan_wall02b1.tga \
	phillipk/pk01_pan_wall02b1_hm.tga \
	phillipk/pk01_pan_wall02b1_nm.tga \
	phillipk/pk01_panel01a.tga \
	phillipk/pk01_panel01a_hm.tga \
	phillipk/pk01_panel01a_nm.tga \
	phillipk/pk01_panel01b.tga \
	phillipk/pk01_panel01b_hm.tga \
	phillipk/pk01_panel01b_nm.tga \
	phillipk/pk01_panel03a.tga \
	phillipk/pk01_panel03a_hm.tga \
	phillipk/pk01_panel03a_nm.tga \
	phillipk/pk01_panel03b.tga \
	phillipk/pk01_panel03b_hm.tga \
	phillipk/pk01_panel03b_nm.tga \
	phillipk/pk01_panel_small01.tga \
	phillipk/pk01_panel_small01_hm.tga \
	phillipk/pk01_panel_small01_nm.tga \
	phillipk/pk01_panel_small02.tga \
	phillipk/pk01_panel_small02_hm.tga \
	phillipk/pk01_panel_small02_nm.tga \
	phillipk/pk01_thin_wall01b.tga \
	phillipk/pk01_thin_wall01b_hm.tga \
	phillipk/pk01_thin_wall01b_nm.tga \
	phillipk/pk01_thin_wall02b.tga \
	phillipk/pk01_thin_wall02b_hm.tga \
	phillipk/pk01_thin_wall02b_nm.tga \
	phillipk/pk01_trims01a.tga \
	phillipk/pk01_trims01a_hm.tga \
	phillipk/pk01_trims01a_nm.tga \
	phillipk/pk01_trims01b.tga \
	phillipk/pk01_trims01b_hm.tga \
	phillipk/pk01_trims01b_nm.tga \
	phillipk/pk01_vent_wall01_nm.tga \
	phillipk/pk01_vent_wall01a.tga \
	phillipk/pk01_vent_wall01a_hm.tga \
	phillipk/pk01_wall01.tga \
	phillipk/pk01_wall01_hm.tga \
	phillipk/pk01_wall01_nm.tga \
	phillipk/pk01_wall02_nm.tga \
	phillipk/pk01_wall02a.tga \
	phillipk/pk01_wall02a_hm.tga \
	phillipk/pk01_wall02a_nm.tga \
	phillipk/pk01_wall02b.tga \
	phillipk/pk01_wall02b_hm.tga \
	phillipk/pk01_wall03.tga \
	phillipk/pk01_wall03_hm.tga \
	phillipk/pk01_wall03_nm.tga \
	phillipk/pk01_wall04.tga \
	phillipk/pk01_wall04_hm.tga \
	phillipk/pk01_wall04_nm.tga \
	phillipk/pk01_wall04b.tga \
	phillipk/pk01_wall04b_hm.tga \
	phillipk/pk01_wall04b_nm.tga \
	phillipk/pk02_ceiling02.tga \
	phillipk/pk02_ceiling02_fx.tga \
	phillipk/pk02_ceiling02_nm.tga \
	phillipk/pk02_ceiling02r.tga \
	phillipk/pk02_ceiling02r_nm.tga \
	phillipk/pk02_computer01a.tga \
	phillipk/pk02_computer01a_hm.tga \
	phillipk/pk02_computer01a_nm.tga \
	phillipk/pk02_door01.tga \
	phillipk/pk02_door01_hm.tga \
	phillipk/pk02_door01_nm.tga \
	phillipk/pk02_floor01.tga \
	phillipk/pk02_floor01_hm.tga \
	phillipk/pk02_floor01_nm.tga \
	phillipk/pk02_floor02.tga \
	phillipk/pk02_floor02_hm.tga \
	phillipk/pk02_floor02_nm.tga \
	phillipk/pk02_floor08.tga \
	phillipk/pk02_floor08a_hm.tga \
	phillipk/pk02_floor08a_nm.tga \
	phillipk/pk02_floor08b.tga \
	phillipk/pk02_floor08b_hm.tga \
	phillipk/pk02_floor08b_nm.tga \
	phillipk/pk02_light02_hm.tga \
	phillipk/pk02_light02_nm.tga \
	phillipk/pk02_light02a.tga \
	phillipk/pk02_light03.tga \
	phillipk/pk02_light03_hm.tga \
	phillipk/pk02_light03_nm.tga \
	phillipk/pk02_panels01a.tga \
	phillipk/pk02_panels01a_hm.tga \
	phillipk/pk02_panels01a_nm.tga \
	phillipk/pk02_plates01a.tga \
	phillipk/pk02_plates01a_hm.tga \
	phillipk/pk02_plates01a_nm.tga \
	phillipk/pk02_switches01a.tga \
	phillipk/pk02_switches01a_hm.tga \
	phillipk/pk02_switches01a_nm.tga \
	phillipk/pk02_switches01b.tga \
	phillipk/pk02_switches01b_nm.tga \
	phillipk/pk02_switches01c.tga \
	phillipk/pk02_switches01c_nm.tga \
	phillipk/pk02_trim03.tga \
	phillipk/pk02_trim03_hm.tga \
	phillipk/pk02_trim03_nm.tga \
	phillipk/pk02_wall02a.tga \
	phillipk/pk02_wall02a_hm.tga \
	phillipk/pk02_wall02a_nm.tga \
	phillipk/pk02_wall02c.tga \
	phillipk/pk02_wall02c_hm.tga \
	phillipk/pk02_wall02c_nm.tga \
	phillipk/pk02_wall03b.tga \
	phillipk/pk02_wall03b_hm.tga \
	phillipk/pk02_wall03b_nm.tga \
	phillipk/pk02_wall06a.tga \
	phillipk/pk02_wall06a_hm.tga \
	phillipk/pk02_wall06a_nm.tga \
	phillipk/pk02_wall07a.tga \
	phillipk/pk02_wall07a_nm.tga \
	phillipk/pk02_wall07b.tga \
	phillipk/pk02_wall07b_nm.tga \
	phillipk/pk02_wall08.tga \
	phillipk/pk02_wall08_hm.tga \
	phillipk/pk02_wall08_nm.tga \
	phillipk/pk02_wall_big02a.tga \
	phillipk/pk02_wall_big02a_hm.tga \
	phillipk/pk02_wall_big02a_nm.tga \
	phillipk/pk02_wall_big02b.tga \
	phillipk/pk02_wall_big02b_hm.tga \
	phillipk/pk02_wall_big02b_nm.tga \
	rage/beam_purple_hm.tga \
	rage/beam_purple_nm.tga \
	rage/beam_purple.tga \
	rage/ceiling2_nm.tga \
	rage/ceiling2.tga \
	rage/ceiling_nm.tga \
	rage/ceiling.tga \
	rage/floor2.tga \
	rage/floor5.tga \
	rage/fod1.tga \
	rage/grid1.tga \
	rage/hexfloor_blue.tga \
	rage/hexfloor_hm.tga \
	rage/hexfloor_nm.tga \
	rage/hexfloor_red.tga \
	rage/hexfloor.tga \
	rage/jpad1a.tga \
	rage/lava.tga \
	rage/light10.tga \
	rage/light12.tga \
	rage/light1.tga \
	rage/light5.tga \
	rage/light7.tga \
	rage/light8.tga \
	rage/metallight_2.tga \
	rage/metal_panel.tga \
	rage/rimlightpurple.tga \
	rage/support_beam.tga \
	rage/support_column_hm.tga \
	rage/support_column_nm.tga \
	rage/support_column.tga \
	rage/support_trim.tga \
	rage/trimlight_blue.tga \
	rage/trimlight_purple.tga \
	rage/trimlight_red.tga \
	rage/wall_blue.tga \
	ramp1b.tga \
	ramp1b.wal \
	ramp1c.tga \
	ramp1c.wal \
	ramp1d.tga \
	ramp1d.wal \
	ramp1e.tga \
	ramp1e.wal \
	ramp1f.tga \
	ramp1f.wal \
	ramp1.tga \
	ramp1.wal \
	rigel/baselightblue.tga \
	rigel/baselightred.tga \
	tac-impact/rubble1.tga \
	tac-impact/rubble1_blendtex.tga \
	tac-impact/rubble1_lightmaptex.tga \
	tac-impact/rubble1_vegetation.tga \
	tac-impact/rubble2.tga \
	tac-impact/rubble2_blendtex.tga \
	tac-impact/rubble2_lightmaptex.tga \
	tac-impact/rubble3.tga \
	tac-impact/rubble3_blendtex.tga \
	tac-impact/rubble3_lightmaptex.tga \
	tac-impact/rubble3_vegetation.tga \
	tac-impact/rubble4.tga \
	tac-impact/rubble4_blendtex.tga \
	tac-impact/rubble4_lightmaptex.tga \
	texturelib/grass_0048.jpg \
	texturelib/grass_0048_nm.tga \
	texturelib/grass_0075.jpg \
	texturelib/grass_0075_nm.tga \
	texturelib/grass_0099.jpg \
	texturelib/grass_0102.jpg \
	texturelib/ground_0045.jpg \
	texturelib/ground_0045_nm.tga \
	texturelib/grunge_decal.tga \
	texturelib/grunge_leaking.jpg \
	texturelib/stones_0027.jpg \
	texturelib/stones_0027_hm.jpg \
	texturelib/stones_0027_nm.jpg \
	water/algae_water.tga \
	water/algae_water_nm.tga \
	water/blood_nm.tga \
	water/blood.tga \
	water/bluewater_nm.tga \
	water/bluewater.tga \
	water/clearwater_nm.tga \
	water/clearwater.tga \
	water/flowingwater.tga \
	water/waterpx.tga \
	wires/wires1.tga \
	wires/wires2.tga \
	wires/wires3.tga \
	wires/wires4.tga \
	xempx/a3light1b.tga \
	xempx/a6bt.tga \
	xempx/a7light10.tga \
	xempx/a7light1b.tga \
	xempx/a7light1.tga \
	xempx/a7light2.tga \
	xempx/a7light3.tga \
	xempx/a7light4.tga \
	xempx/a9metal5.tga \
	xempx/cretered_128_hm.tga \
	xempx/cretered_128_nm.tga \
	xempx/cretered_128.tga \
	xempx/droplet_fx.tga \
	xempx/e7trim_hm.tga \
	xempx/e7trimlight_blue_hm.tga \
	xempx/e7trimlight_blue_nm.tga \
	xempx/e7trimlight_blue.tga \
	xempx/e7trim_nm.tga \
	xempx/e7trim.tga \
	xempx/e8crete03ccred_hm.tga \
	xempx/e8crete03ccred_nm.tga \
	xempx/e8crete03ccred.tga \
	xempx/emtl3-1_hm.tga \
	xempx/emtl3-1_nm.tga \
	xempx/emtl3-1.tga \
	xempx/full_clip.tga \
	xempx/ivy3_nm.tga \
	xempx/ivy3.tga \
	xempx/light1.tga \
	xempx/lightbeam1.tga \
	xempx/sign-electro_hm.tga \
	xempx/sign-electro.tga \
	xempx/sign_radioactive_hm.tga \
	xempx/sign_radioactive.tga
